# backend

./: .coverage  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  check_translates.py  manage.py  pyproject.toml  setup.cfg
coverage_html/: index.html  server_apps_core_activity_verbs_py.html  server_apps_core_admin_base_py.html  server_apps_core_admin_menu_py.html  server_apps_core_admin_mixins_py.html  server_apps_core_apps_py.html  server_apps_core_db_fields_money_py.html  server_apps_core_db_mixins_gl_entity_py.html  server_apps_core_db_mixins_gl_internal_id_py.html  server_apps_core_db_mixins_timestamps_py.html  server_apps_core_db_utils_py.html  server_apps_core_exceptions_py.html  server_apps_core_gitlab_gl_time_py.html  server_apps_core_gitlab_oauth2_py.html  server_apps_core_rest_fields_py.html  server_apps_core_rest_mixins_views_py.html  server_apps_core_rest_pagination_py.html  server_apps_core_rest_routers_py.html  server_apps_core_rest_serializers_link_py.html  server_apps_core_rest_views_py.html  server_apps_core_tasks_py.html  server_apps_core_utils_date_py.html  server_apps_core_utils_http_py.html  server_apps_core_utils_modules_py.html  server_apps_core_utils_objects_py.html  server_apps_core_utils_rest_py.html  server_apps_core_utils_strings_py.html  server_apps_development_admin_filters_milestone_py.html  server_apps_development_admin_filters_project_py.html  server_apps_development_admin_filters_team_py.html  server_apps_development_admin_inlines_note_py.html  server_apps_development_admin_inlines_project_member_py.html  server_apps_development_admin_inlines_team_member_py.html  server_apps_development_admin_main_py.html  server_apps_development_apps_py.html  server_apps_development_db_managers_issue_py.html  server_apps_development_db_managers_merge_request_py.html  server_apps_development_db_managers_milestone_py.html  server_apps_development_db_managers_note_py.html  server_apps_development_db_managers_project_group_py.html  (+136 more)
deploy/: Dockerfile  nginx.conf  run.sh  uwsgi.ini
deploy/helm/: Chart.yaml  values.yaml
deploy/nginx/: nginx.conf
deploy/server/: backend.sh  celery_beat.sh  celery_worker.sh  flower.sh  gunicorn_conf.py  run.sh  uwsgi.ini
develop/: docker-compose.base.yml  docker-compose.local.yml  docker-compose.remote.yml  docker-compose.yml  docker_local.sh  docker_remote.sh  docker_stop.sh  postgres.conf
docker/: Dockerfile
docker/nginx/: nginx.conf
docker/server/: run.sh  uwsgi.ini
scripts/: ci_build_images.sh  lint.sh  pre_commit.sh  quality.sh  release.sh
server/: __init__.py  asgi.py  celery.py  celery_app.py  fuzzy_checker.py  gql.py  gql_schema.py  urls.py  wsgi.py
server/settings/: __init__.py
tests/: .graphqlconfig  base.py  conftest.py  mocks.py  schema.graphql
tests/factory/: fields.py
tests/fixtures/: admin.py  assets.py  clients.py  ghl.py  ghl_mock.py  gitlab.py  gql.py  group.py  group_makers.py  http.py  project.py  project_makers.py  requests.py  settings.py  slack.py  team.py  team_makers.py  users.py
tests/helpers/: __init__.py  api_request_factory.py  asset_provider.py  base.py  checkers.py  db.py  ghl_client.py  gitlab.py  gql_client.py  httpretty_mock.py  lists.py  metrics.py  objects.py  request_factory.py
tests/test_core/: test_camel_cased_ordering_filter.py  test_choices.py  test_nulls_always_last_ordering_filter.py
tests/test_development/: checkers_gitlab.py  factories.py  factories_gitlab.py  mocks.py  test_admin_issue.py  test_admin_merge_request.py  test_admin_milestone.py  test_admin_project.py  test_admin_project_group.py  test_allowed_issues.py  test_allowed_merge_requests.py  test_allowed_milestones.py  test_api_epic_issues.py  test_api_epics.py  test_api_feature_issues.py  test_api_features.py  test_api_gitlab_issue.py  test_api_gitlab_issue_status.py  test_api_gitlab_status.py  test_api_issues.py  test_api_issues_filter_problems.py  test_api_issues_filter_team.py  test_api_issues_metrics.py  test_api_issues_problems.py  test_api_issues_spend.py  test_api_issues_summary.py  test_api_issues_summary_projects.py  test_api_issues_sync.py  test_api_milestone_epics.py  test_api_milestone_features.py  test_api_milestone_issues.py  test_api_milestone_issues_orphan.py  test_api_milestones.py  test_api_milestones_sync.py  test_api_problems.py  test_api_project_group_milestones.py  test_api_project_milestones.py  test_api_salaries.py  test_api_salaries_time_expenses.py  test_api_team_issue_problems.py  (+51 more)
tests/test_fuzzy_checker/: test_fuzzy.py
tests/test_payroll/: factories.py  mixins.py  test_admin_payroll.py  test_admin_salary.py  test_allowed_spent_times.py  test_api_issues_payroll_metrics.py  test_api_metrics_days.py  test_api_metrics_days_payroll.py  test_api_metrics_weeks.py  test_api_metrics_weeks_payroll.py  test_api_salaries.py  test_api_salaries_time_expenses.py  test_api_team_metrics_days.py  test_api_team_metrics_weeks.py  test_api_time_expenses.py  test_api_user_salaries.py  test_api_workbreaks.py  (+33 more)
(+2219 files in other folders)
