[tool.poetry]
name = "team-projector"
version = "0.1.0"
description = ""
authors = ["junte"]

[tool.poetry.dependencies]
python = "^3.9"
python-gitlab = "*"
python-dateutil = "*"
python-decouple = "*"
django = "3.1.*"
djangorestframework = "*"
django-cors-headers = "*"
django-split-settings = "*"
django-extensions = "*"
django-filter = "*"
django-model-utils = "*"
django-health-check = "*"
django-activity-stream = "*"
psycopg2-binary = "*"
jnt-django-admin-tools = "*"
jnt-django-toolbox = {version = "*", extras = ["jaeger"]}
jnt-django-graphene-toolbox = "*"
social-auth-app-django = "*"
social-auth-core = "*"
celery = "4.*"
flower = "*"
redis = "*"
xlsxwriter = "*"
graphene-django = "*"
slackclient = "2.*"
tqdm = "*"
sentry-sdk = "*"
fluent-logger = "*"
gunicorn = "*"
uvicorn = "*"
django-constance = {extras = ["database"], version = "*"}
python-memcached = "*"
premailer = "*"
injector = "*"
pip = "^21.1.2"

[tool.poetry.dev-dependencies]
pytest = "5.*" # problem with integrity
pytest-cov = "*"
pytest-django = "*"
pytest-xdist = "*"
factory-boy = "*"
freezegun = "*"
flake8 = "*"
flake8-django = "*"
flake8-pytest-style = "*"
flake8-pytest = "*"
flake8-class-attributes-order = "*"
mypy = "*"
httpretty = "*"
wemake-python-styleguide = "*"
polint = "*"
dennis = "*"
safety = "*"
xenon = "*"
black = "^20.8b1"
pytest-bdd = "^4.0.2"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git          # root of the project
    | \.mypy_cache
    | \.pytest_cache
    | .*\/migrations
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
